# BankManager-FirstGroup

./: CMakeLists.txt
include/server/: client_database.h  manager.h  server.h  server_database.h
include/user/: user.h
src/: account.cpp  account.h  client_app.cpp  client_app.h  database.cpp  database.h  main.cpp  server_app.cpp  server_app.h  user.cpp  user.h
src/server/: client_database.cpp  manager.cpp  server.cpp  server_database.cpp
src/user/: user.cpp
